spade-tests/src/snapshots/spade_tests__usefulness__tests__missing_integer_patterns_reports_correctly.snap
---
source: spade-tests/src/usefulness.rs
---
fn uwu(a: int<8>) -> bool {
    match a {
        0 => true,
    }
}


error: Non-exhaustive match: patterns -128..0, 1..128 not covered
  ┌─ testinput:2:5
  │  
2 │ ╭     match a {
3 │ │         0 => true,
4 │ │     }
  │ ╰─────^ patterns -128..0, 1..128 not covered
