spade-tests/src/snapshots/spade_tests__usefulness__tests__missing_integer_patterns_reports_correctly2.snap
---
source: spade-tests/src/usefulness.rs
---
fn uwu(a: int<8>) -> bool {
    match a {
        0 => true,
        1 => true,
        4 => true,
    }
}


error: Non-exhaustive match: patterns -128..0, 2..4 and 1 more not covered
  ┌─ testinput:2:5
  │  
2 │ ╭     match a {
3 │ │         0 => true,
4 │ │         1 => true,
5 │ │         4 => true,
6 │ │     }
  │ ╰─────^ patterns -128..0, 2..4 and 1 more not covered
